--- a/robinson.erin.Rmd
+++ b/robinson.erin.Rmd
@@ -15,11 +15,27 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+```{r perform-math }
+# perform addition
+a <- 1+2
+b <- 234
+
+# subtract a from b
+final_answer <- b - a
+
+# write out the final answer variable
+final_answer
 ```
 
-## Including Plots
+```{r math-part-two }
+
+   # More math2!
+   a * b
+
+   a * b / final_answer 
+```
+
+ ## Including Plots
 
 You can also embed plots, for example:
 
@@ -28,3 +44,21 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+```{r testing-arguments, eval = FALSE }
+
+   # More math!
+   a * b
+
+   a * b / final_answer
+ ```
+
+ ```{r testing-arguments, echo=FALSE }
+    # More math!
+    a * b
+
+    a * b / final_answer
+  ```
+
+
+
