--- a/R_codeexample.Rmd
+++ b/R_codeexample.Rmd
@@ -2,7 +2,10 @@
 title: "DataVizAssessment"
 author: "Erin Robinson"
 date: "8/4/2021"
-output: html_document
+output:   
+  md_document:
+    variant: markdown_github
+    preserve_yaml: true
 ---
 
 ```{r setup, include=FALSE}
