Update and rename 2021-08-03-Day3.md to 2021-08-05-Day3.md
few other reminders

--- a/_posts/2021-08-05-Day3.md
+++ b/_posts/2021-08-05-Day3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  Day 3 of Bootcamp  CU Scholar & Data Ethics (part 1)  
-date:   2021-08-04
+date:   2021-08-05
 categories: examples
 nav_order: 2
 ---
@@ -10,3 +10,5 @@ Cool - https://scholar.colorado.edu/catalog?f%5Bresource_type_sim%5D%5B%5D=Data+
 Nice discussion of FAIR 
 
 Don't use GitHub data storage, 
+
+Fork repo -> clone to desktop and open notebook in Jupyter Lab
